install_k8s_on_centos7/k8s-dashboard/ingress-dashboard.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: k8s-dashboard
    namespace: kube-system
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/secure-backends: "true"
  spec:
    tls:
    - hosts:
      - tomcat.zaizai.com
      secretName: k8s-dashboard-secret
    rules:
    - host: tomcat.zaizai.com
      http:
        paths:
        - path: /
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 9090
